Fixed server, new problems with account schema

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular": "^1.6.4",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "express": "^4.15.3",
     "express-session": "^1.13.0",
