--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-route": "^1.6.4",
+    "angular-ui-bootstrap": "^2.5.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
@@ -21,6 +22,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "imdb-api": "^3.1.1",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.10.6"
   },
