--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "imdb-api": "^3.1.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
-    "mongoose": "^4.10.8"
+    "mongoose": "^4.10.8",
+    "nodemon": "^1.11.0"
   },
   "author": "jmx2",
   "license": "UNLICENSED",
